change from master to main

--- a/Intro-to-html/position.html
+++ b/Intro-to-html/position.html
@@ -30,18 +30,20 @@ padding-left: 80px;">
   "> sidebar</div>
 
   <div style="
-  background-color: lightblue;
+  position: absolute;>
+  absolute
+  </div>
+
+  <div style="background-color: lightblue;
   height: 200px;
   width: 200px;
-  position: static;
- 
-  ">div 1
-  </div>
+  position: static;">div 1</div>
 
   <div style="background-color: lightpink;
   height: 200px;
   width: 200px;
-  position: static;">div 2</div>
+  position: static;">
+  div 2</div>
 
 </body>
 </html>
