--- a/youtube.html
+++ b/youtube.html
@@ -23,7 +23,8 @@
       <img class="hamburger-menu" src="thumbnails/icons/hamburger-menu.svg"> 
       <img class="youtube-logo" src="thumbnails/icons/youtube-logo.svg">
     </div>
-   
+  </div>
+  
 <div class="sidebar">
   sidebar
 </div>
