--- a/Intro-to-html/position.html
+++ b/Intro-to-html/position.html
@@ -30,20 +30,25 @@ padding-left: 80px;">
   "> sidebar</div>
 
   <div style="
-  position: absolute;>
-  absolute
-  </div>
+    position: absolute;
+    background-color: red;
+    color: white;
+    left: 4px;
+    ">absolute</div>
+  
 
-  <div style="background-color: lightblue;
-  height: 200px;
-  width: 200px;
-  position: static;">div 1</div>
-
+  <div style="
+      background-color: lightblue;
+      height: 200px;
+      width: 200px;
+      position: static;
+      " > div 1 </div>
+  
   <div style="background-color: lightpink;
-  height: 200px;
-  width: 200px;
-  position: static;">
-  div 2</div>
+      height: 200px;
+      width: 200px;
+      position: static;"
+  >div 2</div>
 
 </body>
 </html>
