--- a/Intro-to-html/position.html
+++ b/Intro-to-html/position.html
@@ -27,14 +27,25 @@ padding-left: 80px;">
   bottom: 0;
   top: 50px;
   width: 72px;
-  "> sidebar</div>
+  "> sidebar
 
   <div style="
-    position: absolute;
-    background-color: red;
-    color: white;
-    left: 4px;
-    ">absolute</div>
+  position: absolute;
+  background-color: red;
+  color: white;
+  top: 0px;
+  right: 0px;
+  ">X</div>
+
+</div>
+
+<div style="
+position: absolute;
+background-color: red;
+color: white;
+top: 60px;
+right: 0px;
+">absolute</div>
   
 
   <div style="
@@ -47,8 +58,16 @@ padding-left: 80px;">
   <div style="background-color: lightpink;
       height: 200px;
       width: 200px;
-      position: static;"
-  >div 2</div>
+      position: relative;"
+  >div 2
+  <div style="
+    position: absolute;
+    background-color: black;
+    color: white;
+   bottom:10px;
+   right: 10px
+  ">5:00</div>
+</div>
 
 </body>
 </html>
