--- a/youtube.html
+++ b/youtube.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,11 +24,8 @@
       <img class="hamburger-menu" src="thumbnails/icons/hamburger-menu.svg"> 
       <img class="youtube-logo" src="thumbnails/icons/youtube-logo.svg">
     </div>
-  </div>
-  
-<div class="sidebar">
-  sidebar
-</div>
+   
+
 
   <div class="middle-section">
      <input class="search-bar" 
@@ -43,27 +41,34 @@
       </button>
   </div>
 
-  <div class="right-section">
+<div class="right-section">
     <img class= "upload-icon" src="thumbnails/icons/upload.svg">
     <img class="youtube-apps-icon" src="thumbnails/icons/youtube-apps.svg">
-    <img class=" notification-icon" src="thumbnails/icons/notifications.svg">
+    <div class="notifications-icon-container"> 
+      <div class="notifications-count">3</div>
+      <img class=" notification-icon" src="thumbnails/icons/notifications.svg">
+      
+    </div>
     <img class="current-user-picture" src="thumbnails/my-channel.jpeg">
-  </div>
-    
-  </div>
-  
+</div>
+</div>
+
+<div class="sidebar">
+  sidebar
+</div>
   <div class="video-grid">
 <!-- Settings in this colunms are for video 1-->   
 <div class="video-preview">
   <div class="thumbnail-row">
   <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+  <div class="video-time">14:20</div>
   </div>
  <!--  -->
  <div class="video-info-grid">
       <div class="channel-picture">
       <img class="profile-picture" src="thumbnails/channel-1.jpeg">
       </div>
-      <div class="video-info">
+ <div class="video-info">
       <p class="video-title"> Talking Tech and AI with Google CEO Sundar Pitchail!
       </p>
       <p class="video-author">Marques Brownlee</p>
@@ -76,7 +81,8 @@
 <!-- settings are for video 2-->
 <div class="video-preview">
    <div class="thumbnail-row">
-     <img class="thumbnail" src="thumbnails/thumbnail-2.webp"></div>
+     <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+     <div class="video-time">8:22</div></div>
 
  
    <div class="video-info-grid">
@@ -99,6 +105,7 @@
 <div class="video-preview">
      <div class="thumbnail-row">
        <img class="thumbnail" src="thumbnails/thumbnail-3.webp">
+       <div class="video-time">9:13</div>
      </div>
    
  <div class="video-info-grid">
@@ -120,6 +127,7 @@
 <div class="video-preview">
      <div class="thumbnail-row">
        <img class="thumbnail" src="thumbnails/thumbnail-4.webp">
+       <div class="video-time">22:09</div>
      </div>
 
    <div class="video-info-grid">
@@ -139,6 +147,7 @@
 <div class="video-preview">
      <div class="thumbnail-row">
        <img class="thumbnail" src="thumbnails/thumbnail-5.webp">
+       <div class="video-time">11:17</div>
      </div>
        <!--  -->
  <div class="video-info-grid">
@@ -159,6 +168,7 @@
 <div class="video-preview">
      <div class="thumbnail-row">
      <img class="thumbnail" src="thumbnails/thumbnail-6.webp">
+     <div class="video-time">19:59</div>
      </div>
 
      <!--  -->
