--- a/youtube.html
+++ b/youtube.html
@@ -33,16 +33,21 @@
 
       <button class="search-button">
       <img class="search-icon" src="thumbnails/icons/search.svg">
+      <div class="tooltip">Search</div>
       </button>
 
       <button class="voice-search-button">
       <img class="voice-search-icon" src="thumbnails/icons/voice-search-icon.svg">
+      <div class="tooltip">Search with your voice</div>
       <!-- <div class="tooltip">Search with your voice</div> -->
       </button>
   </div>
 
 <div class="right-section">
-    <img class= "upload-icon" src="thumbnails/icons/upload.svg">
+  <div class="upload-icon-container"><img class= "upload-icon" src="thumbnails/icons/upload.svg">
+    <div class="tooltip">Create</div>
+  </div>
+    
     <img class="youtube-apps-icon" src="thumbnails/icons/youtube-apps.svg">
     <div class="notifications-icon-container"> 
       <div class="notifications-count">3</div>
@@ -54,7 +59,25 @@
 </div>
 
 <div class="sidebar">
-  sidebar
+  <div class="sidebar-link" > <img src="thumbnails/icons/home.svg"> 
+  <div>Home</div>
+  </div>
+  <div class="sidebar-link" > <img src="thumbnails/icons/explore.svg"> 
+    <div>Explore</div>
+  </div>
+  <div class="sidebar-link" > <img src="thumbnails/icons/subscriptions.svg">
+    <div>Subscriptions</div>
+  </div>
+  <div class="sidebar-link" > <img src="thumbnails/icons/originals.svg">
+    <div>Originals</div>
+  </div>
+  <div class="sidebar-link" > <img src="thumbnails/icons/youtube-music.svg">
+    <div>Youtube Music</div>
+  </div>
+  <div class="sidebar-link" > <img src="thumbnails/icons/library.svg"> 
+    <div>Library</div>
+  </div>
+  
 </div>
   <div class="video-grid">
 <!-- Settings in this colunms are for video 1-->   
