completed up to notifications

--- a/youtube.html
+++ b/youtube.html
@@ -1,5 +1,7 @@
 
 
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -44,14 +46,21 @@
   </div>
 
 <div class="right-section">
-  <div class="upload-icon-container"><img class= "upload-icon" src="thumbnails/icons/upload.svg">
+  
+  <div class="upload-icon-container"><img class= "upload-icon" 
+    src="thumbnails/icons/upload.svg">
     <div class="tooltip">Create</div>
   </div>
     
+    <div class="youtube-icon-container">
     <img class="youtube-apps-icon" src="thumbnails/icons/youtube-apps.svg">
+    <div class="tooltip">Youtube Apps</div>
+  </div>
+
     <div class="notifications-icon-container"> 
       <div class="notifications-count">3</div>
       <img class=" notification-icon" src="thumbnails/icons/notifications.svg">
+      <div class="tooltip">Notifications</div>
       
     </div>
     <img class="current-user-picture" src="thumbnails/my-channel.jpeg">
